Task-56377: fix notification badges alignment (#493)
Problem: Notification badges for onsite notification and chat notification are not aligned for mobile and desktop
Fix: fix the skin of the badge for chat notification to make it aligned with the other badjes for mobile and desktop

--- a/application/src/main/webapp/css/components/chatDrawer.less
+++ b/application/src/main/webapp/css/components/chatDrawer.less
@@ -10,7 +10,7 @@
       position: absolute;
       left: 21px ~'; /** orientation=lt */ ';
       right: 21px ~'; /** orientation=rt */ ';
-      top: -5px;
+      top: -9px;
       font-size: 12px;
       min-width: 20px;
       height: 20px;
